# hermes-agent-ultra

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  EQUITY_RESEARCH_CHECKLIST.md  EQUITY_RESEARCH_TODO.md  Makefile  PARITY_PLAN.md  README.md
.cargo/: config.toml
.ci/: clippy-allowlist.txt
.github/workflows/: build-variants.yml  ci.yml  nightly.yml  release.yml
apps/hermes-desktop-tauri/: README.md  package.json  (+1 more)
crates/hermes-accounts/: Cargo.toml
crates/hermes-accounts/src/: account_store.rs  consent.rs  lib.rs  store.rs  types.rs
crates/hermes-billing/: Cargo.toml
crates/hermes-billing/src/: feature_gate.rs  heuristic.rs  lang_profile.rs  lib.rs  tier_mapping.rs  tool_budget.rs
crates/hermes-browser-driver/: Cargo.toml
crates/hermes-browser-driver/src/: actions.rs  approval.rs  driver.rs  lib.rs
crates/hermes-copilot-lite/: Cargo.toml
crates/hermes-copilot-lite/src/: error.rs  lib.rs  orchestrator.rs  report.rs
crates/hermes-datasources/: Cargo.toml
crates/hermes-datasources/src/: akshare_cloud.rs  akshare_local.rs  lib.rs  registry.rs  types.rs  user_custom.rs
crates/hermes-market-watch/: Cargo.toml
crates/hermes-market-watch/src/: alert.rs  error.rs  lib.rs  quote.rs  watchlist.rs
crates/hermes-parity-tests/: Cargo.toml
crates/hermes-parity-tests/fixtures/: registry.json
crates/hermes-parity-tests/fixtures/code_execution_stubs/: generate.json  web_search_only.expected.txt
crates/hermes-parity-tests/fixtures/trading_backtest/: sma_cross.json
crates/hermes-parity-tests/fixtures/trading_market_data/: ohlcv.json
crates/hermes-parity-tests/fixtures/trading_quote/: quote.json
crates/hermes-parity-tests/fixtures/trading_research/: models_golden.json
crates/hermes-parity-tests/fixtures/trading_research_fetch/: fetcher_golden.json  quick_scan_profile.json
crates/hermes-parity-tests/fixtures/vibe_backtest/: sma_cross.json
crates/hermes-parity-tests/fixtures/vibe_market_data/: ohlcv.json
crates/hermes-parity-tests/src/: harness.rs
crates/hermes-parity-tests/tests/: equity_research_fetcher_parity.rs  equity_research_parity.rs  trading_parity.rs  vibe_parity.rs
crates/hermes-server-client/: Cargo.toml
crates/hermes-server-client/src/: doctor.rs  error.rs  lib.rs  session.rs  transport.rs
crates/hermes-server-client/src/activation/: fingerprint.rs  geoip.rs  mod.rs
crates/hermes-server-client/src/auth/: email_otp.rs  manager.rs  mod.rs  provider.rs  types.rs  wechat_open.rs  wechat_qr.rs
crates/hermes-server-client/src/flowy/: media.rs  media_types.rs  mod.rs  model_resolve.rs  types.rs
crates/hermes-server-client/src/llm/: mod.rs
crates/hermes-strategies/: Cargo.toml
crates/hermes-strategies/src/: declarative.rs  dsl.rs  error.rs  indicators.rs  lib.rs  registry.rs  strategy.rs
crates/hermes-tasks/: Cargo.toml
crates/hermes-tasks/migrations/: 0001_baseline.sql
crates/hermes-tasks/src/: db.rs  lib.rs
crates/hermes-tasks/src/artifacts/: mod.rs  signed_url.rs  store.rs
crates/hermes-tasks/src/repo/: event.rs  mod.rs  task.rs  turn.rs
crates/hermes-tasks/src/runtime/: cancel.rs  checkpoint.rs  fork.rs  mod.rs  resume.rs  spawn.rs
crates/hermes-tasks/src/schema/: encoding.rs  events.rs  mod.rs
crates/hermes-tasks/src/types/: event.rs  ids.rs  mod.rs  task.rs  task_category.rs  turn.rs
crates/hermes-trading/: Cargo.toml
crates/hermes-trading/src/: backtest.rs  cache.rs  error.rs  http.rs  lib.rs  quote_cache.rs  quote_data.rs  quote_provider.rs  settlement.rs  symbol.rs  text_encoding.rs  types.rs
crates/hermes-trading/src/providers/: binance.rs  binance_quote.rs  eastmoney.rs  eastmoney_financials.rs  eastmoney_http.rs  eastmoney_lhb.rs  eastmoney_quote.rs  mock.rs  mod.rs  quote_mock.rs  quote_router.rs  router.rs  yahoo.rs
crates/hermes-trading/src/providers/akshare/: basic_info.rs  candles.rs  capital_flow.rs  events.rs  financials.rs  labels.rs  lhb.rs  mod.rs  quote.rs  research.rs  valuation.rs
crates/hermes-trading/src/research/: analyze.rs  confidence_supplement.rs  gate.rs  mod.rs  profile.rs  report_filter.rs  types.rs
crates/hermes-trading/src/research/fetchers/: bridge.rs  collect.rs  context.rs  mod.rs  registry.rs  schedule.rs  types.rs
crates/hermes-trading/src/research/fetchers/dims/: basic.rs  capital_flow.rs  events.rs  financials.rs  kline.rs  kline_util.rs  lhb.rs  mod.rs  research.rs  valuation.rs  web_skipped.rs
crates/hermes-trading/src/research/personas/: evaluator.rs  mod.rs  rules.rs
crates/hermes-trading/src/research/report/: chat_brief.rs  content.rs  dim_charts.rs  dim_viz.rs  disk.rs  html_acceptance.rs  identity.rs  institutional.rs  labels.rs  markdown.rs  mod.rs  styles.rs
crates/hermes-trading/src/research/report/sections/: appendix.rs  core.rs  dcf_block.rs  dimensions.rs  external.rs  flows.rs  fundamentals.rs  hero.rs  mod.rs  panel.rs  sector.rs  util.rs
crates/hermes-trading/src/research/scoring/: dims.rs  mod.rs
crates/hermes-trading/src/research/synthesis/: mod.rs
crates/hermes-vibe/: Cargo.toml
crates/hermes-vibe/src/: backtest.rs  error.rs  indicators.rs  lib.rs  provider.rs  types.rs
crates/hermes-vibe/src/providers/: binance.rs  eastmoney.rs  mock.rs  mod.rs  router.rs
crates/hermes-wiki/: Cargo.toml
crates/hermes-wiki/src/: error.rs  frontmatter.rs  hash.rs  init.rs  lib.rs  lint.rs  main.rs  search.rs  types.rs  wikilink.rs
docs/: MIGRATION_PROGRESS.md  MIGRATION_SUMMARY.md  upstream-sync.md  version-management-guide.md  weixin-gateway-configuration.md  weixin-picoclaw-comparison-zh.md
plans/: ultra-8pack-governance.md
scripts/: README-gateway-windows.md  ensure-runtime-dep.sh  generate-homebrew-formula.sh  generate-upstream-patch-queue.py  hwiki.sh  install.ps1  install.sh  run-differential-parity-gate.py  run-upstream-slash-parity-gate.py  run-upstream-surface-coverage-gate.py  start-gateway-ultra.ps1  upload-modelscope-release.py  upstream_webhook_sync.py  verify-terra.ps1
tests/: test_generate_upstream_patch_queue.py  test_upstream_surface_coverage_gate.py  test_upstream_webhook_sync_rust_only_guard.py
(+688 files in other folders)
