[package]
name = "hermes-billing"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Billing, quota, and feature gate for Terra"

[dependencies]
hermes-tasks = { workspace = true }
hermes-accounts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
