[package]
name = "hermes-copilot-lite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Copilot Lite: lightweight orchestration for Vibe Research workflows"

[features]
default = []

[dependencies]
hermes-vibe = { workspace = true }
hermes-strategies = { workspace = true }
hermes-market-watch = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
