[package]
name = "hermes-datasources"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Data source provider factory for Terra"

[dependencies]
async-trait = { workspace = true }
hermes-tasks = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
