[package]
name = "hermes-parity-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Golden parity fixtures between Python Hermes and Rust implementations"

[dependencies]
hermes-vibe = { workspace = true, features = ["test-mock"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
hermes-vibe = { workspace = true, features = ["test-mock"] }
