[package]
name = "hermes-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote LLM server client (auth + OpenAI-compatible LLM gateway) for Hermes Agent"

[dependencies]
hermes-auth = { workspace = true }
hermes-config = { workspace = true }
hermes-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = "3"
