[package]
name = "hermes-strategies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Strategy engine and technical indicators for Vibe Research"

[features]
default = []

[dependencies]
hermes-vibe = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
