[package]
name = "hermes-wiki"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Karpathy's LLM Wiki: fast markdown knowledge base tooling"

[[bin]]
name = "hwiki"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = "0.11"
walkdir = "2"
dirs = "6"
smallvec = "1"
notify = "7"

[dev-dependencies]
tempfile = "3"
